--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css?v=1" type="text/css">
 </head>
 <body>
     <header>
